# api.yml
@@ -23,23 +23,23 @@ paths:
           schema:
             type: array
             items:
-              $ref: "#/definitions/HostRule"
+              $ref: "#/definitions/HostRules"
 
         500:
           $ref: '#/responses/InternalServerError'
     post:
       summary: "Create or replace host rules"
       description: "Update host rule if host rule exists or create host rule"
-      operationId: replaceHostRule
+      operationId: replaceHostRules
       consumes:
       - application/json
       produces:
       - application/json
       parameters:
-        - name: host_rule
+        - name: host_rules
           in: body
           schema:
-            $ref: '#/definitions/HostRule'
+            $ref: '#/definitions/HostRules'
           required: true
       responses:
         400:
@@ -47,9 +47,9 @@ paths:
         422:
           description: "Invalid validation"
         200:
-          description: "Create HostRule"
+          description: "Create HostRules"
           schema:
-            $ref: "#/definitions/HostRule"
+            $ref: "#/definitions/HostRules"
         500:
           $ref: '#/responses/InternalServerError'
 
@@ -98,7 +98,7 @@ definitions:
     type: object
     x-nullable: false
     properties:
-      target_path:
+      path:
         type: string
         pattern: '/.*'
         x-nullable: false
@@ -109,15 +109,15 @@ definitions:
         maximum: 399
         x-nullable: false
     required:
-    - target_path
+    - path
     - http_code
     example:
       {
-        target_path: "/target",
+        path: "/target",
         http_code: 301
       }
 
-  HostRule:
+  HostRules:
     type: object
     x-nullable: false
     properties:
@@ -128,7 +128,7 @@ definitions:
       default_target:
         $ref: '#/definitions/Target'
       rules:
-        type: "array"
+        type: array
         items:
           $ref: "#/definitions/Rule"
     required:
@@ -139,14 +139,14 @@ definitions:
       {
         host: "example.org",
         default_target: {
-          target_path: "/target",
+          path: "/target",
           http_code: 301
         },
         rules: [
           {
-            source_path_pattern: '/source',
+            source_path: '/source',
             target: {
-              target_path: "/target",
+              path: "/target",
               http_code: 301
             },
             active_from: '2018-03-15T12:00:00Z'
@@ -155,38 +155,38 @@ definitions:
       }
 
   Rule:
-    type: "object"
+    type: object
     x-nullable: false
     properties:
-      source_path_pattern:
+      source_path:
         type: string
         description: "Regex for match source path"
         x-nullable: false
       target:
         $ref: '#/definitions/Target'
       active_from:
-        type: "string"
-        format: "date-time"
+        type: string
+        format: date-time
         x-nullable: true
       active_to:
-        type: "string"
-        format: "date-time"
+        type: string
+        format: date-time
         x-nullable: true
     required:
-    - source_path_pattern
+    - source_path
     - target
     example:
       {
-        source_path_pattern: '/source',
+        source_path: '/source',
         target: {
-          target_path: '/target',
+          path: '/target',
           http_code: 301
         },
         active_from: '2018-03-16T12:00:00Z'
       }
 
   ServerError:
-    type: "object"
+    type: object
     properties:
       message:
         type: string
